add baidu tracking scripts

--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>KKGo1999</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">   
 </head>
-
 <body>
 <h1>KKGo1999</h1>
 <p>你好，我是KKGo，AI行业的从业者（程序猿、攻城狮、架构狮）。对AI、通用人工智能、LLM模型（如GPT）、视觉模型非常感兴趣。</p>
@@ -22,6 +21,15 @@
 <blockquote>
 <p>同时我有维护一个AI和技术粉丝群，如果感兴趣，欢迎加我微信入群交流：KKGo1999</p>
 </blockquote>
-</body>
 
+<script>
+var _hmt = _hmt || [];
+(function() {
+    var hm = document.createElement("script");
+    hm.src = "https://hm.baidu.com/hm.js?5998dd366ff450c7cb32a3a6ab780e63";
+    var s = document.getElementsByTagName("script")[0]; 
+    s.parentNode.insertBefore(hm, s);
+})();
+</script>
+</body>
 </html>
