add baidu tracking scripts

--- a/redirect/gpt_shortcut.html
+++ b/redirect/gpt_shortcut.html
@@ -1,9 +1,18 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta http-equiv="refresh" content="0; url='https://www.icloud.com/shortcuts/b02b35174907436cb5def9dde1ba3443'" />
-  </head>
-  <body>
-    <p><a href="https://www.icloud.com/shortcuts/b02b35174907436cb5def9dde1ba3443">打开AI小助手</a>.</p>
-  </body>
+<head>
+  <meta http-equiv="refresh" content="0; url='https://www.icloud.com/shortcuts/b02b35174907436cb5def9dde1ba3443'" />
+</head>
+<body>
+  <p><a href="https://www.icloud.com/shortcuts/b02b35174907436cb5def9dde1ba3443">打开AI小助手</a>.</p>
+</body>
+<script>
+var _hmt = _hmt || [];
+(function() {
+    var hm = document.createElement("script");
+    hm.src = "https://hm.baidu.com/hm.js?5998dd366ff450c7cb32a3a6ab780e63";
+    var s = document.getElementsByTagName("script")[0]; 
+    s.parentNode.insertBefore(hm, s);
+})();
+</script>
 </html>
