--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>KKGo1999</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">   
+    <link rel="stylesheet" href="css/light.css" media="(prefers-color-scheme: light)">
+    <link rel="stylesheet" href="css/dark.css" media="(prefers-color-scheme: dark)">  
 </head>
 <body>
 <h1>KKGo1999</h1>
@@ -23,6 +25,23 @@
 </blockquote>
 
 <script>
+// auto-theme
+if (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches) {
+  document.querySelector('link[href="light.css"]').disabled = true;
+} else {
+  document.querySelector('link[href="dark.css"]').disabled = true;
+}
+
+window.matchMedia('(prefers-color-scheme: dark)').addEventListener('change', e => {
+  if (e.matches) {
+    document.querySelector('link[href="light.css"]').disabled = true;
+    document.querySelector('link[href="dark.css"]').disabled = false;
+  } else {
+    document.querySelector('link[href="dark.css"]').disabled = true;
+    document.querySelector('link[href="light.css"]').disabled = false;
+  }
+});
+
 var _hmt = _hmt || [];
 (function() {
     var hm = document.createElement("script");
