--- a/redirect/gpt_shortcut.html
+++ b/redirect/gpt_shortcut.html
@@ -1,12 +1,31 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta http-equiv="refresh" content="0; url='https://www.icloud.com/shortcuts/b02b35174907436cb5def9dde1ba3443'" />
+  <meta http-equiv="refresh" content="1; url='https://www.icloud.com/shortcuts/b02b35174907436cb5def9dde1ba3443'" />
+  <link rel="stylesheet" href="../css/light.css" media="(prefers-color-scheme: light)">
+  <link rel="stylesheet" href="../css/dark.css" media="(prefers-color-scheme: dark)">
 </head>
 <body>
-  <p><a href="https://www.icloud.com/shortcuts/b02b35174907436cb5def9dde1ba3443">打开AI小助手</a>.</p>
-</body>
+<p><a href="https://www.icloud.com/shortcuts/b02b35174907436cb5def9dde1ba3443">打开AI小助手</a>.</p>
+
 <script>
+// auto-theme
+if (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches) {
+  document.querySelector('link[href="light.css"]').disabled = true;
+} else {
+  document.querySelector('link[href="dark.css"]').disabled = true;
+}
+
+window.matchMedia('(prefers-color-scheme: dark)').addEventListener('change', e => {
+  if (e.matches) {
+    document.querySelector('link[href="light.css"]').disabled = true;
+    document.querySelector('link[href="dark.css"]').disabled = false;
+  } else {
+    document.querySelector('link[href="dark.css"]').disabled = true;
+    document.querySelector('link[href="light.css"]').disabled = false;
+  }
+});
+
 var _hmt = _hmt || [];
 (function() {
     var hm = document.createElement("script");
@@ -15,4 +34,5 @@ var _hmt = _hmt || [];
     s.parentNode.insertBefore(hm, s);
 })();
 </script>
+</body>
 </html>
