--- a/redirect/gpt_shortcut.html
+++ b/redirect/gpt_shortcut.html
@@ -2,11 +2,13 @@
 <html>
 <head>
   <meta http-equiv="refresh" content="1; url='https://www.icloud.com/shortcuts/b02b35174907436cb5def9dde1ba3443'" />
+  <link rel="stylesheet" href="../css/base.css">
   <link rel="stylesheet" href="../css/light.css" media="(prefers-color-scheme: light)">
   <link rel="stylesheet" href="../css/dark.css" media="(prefers-color-scheme: dark)">
 </head>
 <body>
-<p><a href="https://www.icloud.com/shortcuts/b02b35174907436cb5def9dde1ba3443">打开AI小助手</a>.</p>
+<h1><a href="https://www.icloud.com/shortcuts/b02b35174907436cb5def9dde1ba3443">打开AI小助手</a></h1>
+<h1>自动跳转中...</h1>
 
 <script>
 // auto-theme
