--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>KKGo1999</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">   
+    <!--meta name="viewport" content="width=device-width, initial-scale=1"-->
+    <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/light.css" media="(prefers-color-scheme: light)">
     <link rel="stylesheet" href="css/dark.css" media="(prefers-color-scheme: dark)">  
 </head>
