--- a/index.html
+++ b/index.html
@@ -12,18 +12,19 @@
 <body>
 <h1>KKGo1999</h1>
 <p>你好，我是KKGo，AI行业的从业者（程序猿、攻城狮、架构狮）。对AI、通用人工智能、LLM模型（如GPT）、视觉模型非常感兴趣。</p>
-<p>目前在以下平台分享AI和科技类的视频。</p>
+<p>目前在以下平台分享AI和科技类的视频：</p>
 <ul>
 	<li><a href="https://space.bilibili.com/406715814" target="_blank">Bilibili (KKGo1999)</a></li>
 	<li><a href="https://www.douyin.com/user/MS4wLjABAAAA5E-YBbgAvGQwoSdyY8xK5ZPJU3-RlzggGYcrKPkn4eY" target="_blank">抖音 (KKGo1999)</a></li>
 	<li><a href="https://www.youtube.com/@KKGo1999" target="_blank">YouTube (KKGo1999)</a></li>
+  <li><a href="https://twitter.com/KKGo1999" target="_blank">Twitter (KKGo1999)</a></li>
 </ul>
 
-<p>如果对你有帮助，欢迎关注。以上各个平台均的账号均为：<em><strong>KKGo1999</strong></em></p>
-
-<blockquote>
-<p>同时我有维护一个AI和技术粉丝群，如果感兴趣，欢迎加我微信入群交流：KKGo1999</p>
-</blockquote>
+<p>媒体和联络账号：</p>
+<ul>
+  <li><a href="https://twitter.com/KKGo1999" target="_blank">Twitter (@KKGo1999)</a></li>
+  <li><a href="#" target="_blank">微信 (KKGo1999)</a>（有个AI和技术粉丝群，如感兴趣，欢迎加微信入群交流）</li>
+</ul>
 
 <script>
 // auto-theme
