--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>KKGo1999</title>
-    <!--meta name="viewport" content="width=device-width, initial-scale=1"-->
+    <title>KKGo1999，AI行业的从业者（程序猿、攻城狮）</title>
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/light.css" media="(prefers-color-scheme: light)">
     <link rel="stylesheet" href="css/dark.css" media="(prefers-color-scheme: dark)">  
@@ -13,11 +12,17 @@
 <h1>KKGo1999</h1>
 
 <p>你好哇，我是KKGo，AI行业的从业者（程序猿、攻城狮）。对AI、通用人工智能、LLM模型（如GPT）、视觉模型非常感兴趣。</p>
-<p>目前在以下平台分享AI和科技类的视频：</p>
+
+<p>我的AI和科技类视频：</p>
 <ul>
 	<li><a href="https://space.bilibili.com/406715814" target="_blank">Bilibili (KKGo1999)</a></li>
 	<li><a href="https://www.douyin.com/user/MS4wLjABAAAA5E-YBbgAvGQwoSdyY8xK5ZPJU3-RlzggGYcrKPkn4eY" target="_blank">抖音 (KKGo1999)</a></li>
 	<li><a href="https://www.youtube.com/@KKGo1999" target="_blank">YouTube (KKGo1999)</a></li>
+</ul>
+
+<p>技术交流：</p>
+<ul>
+  <li><a href="https://github.com/kkgo1999/ChatGPT target="_blank">ChatGPT技术手册</a></li>
 </ul>
 
 <p>媒体和联络方式：</p>
@@ -27,6 +32,9 @@
   <img src="img/kkgo1999.wechat.jpg" width="320px" title="微信 (KKGo1999)" />
   <img src="img/wechat.ai.group.jpg" width="320px" title="AI技术交流微信群" />
 </ul>
+
+<p>如果我的视频或代码有帮助到你，欢迎buy a cup of coffe：</p>
+<img src="img/wepay.qr.jpg" width="320px" title="微信支付" />
 
 <script>
 // auto-theme
