--- a/index.html
+++ b/index.html
@@ -33,8 +33,10 @@
   <img src="img/wechat.ai.group.jpg" width="320px" title="AI技术交流微信群" />
 </ul>
 
-<p>如果我的视频或代码有帮助到你，欢迎buy a cup of coffe：</p>
-<img src="img/wepay.qr.jpg" width="320px" title="微信支付" />
+<p>如果我的视频或代码对你有帮助，欢迎Buy Me a Coffee, Thanks♪(･ω･)ﾉ：</p>
+<ul>
+  <li><img src="img/wepay.qr.jpg" width="320px" title="微信支付" /></li>
+</ul>
 
 <script>
 // auto-theme
