--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <p>技术交流：</p>
 <ul>
-  <li><a href="https://github.com/kkgo1999/ChatGPT target="_blank">ChatGPT技术手册</a></li>
+  <li><a href="https://github.com/kkgo1999/ChatGPT" target="_blank">ChatGPT技术手册</a></li>
 </ul>
 
 <p>媒体和联络方式：</p>
@@ -30,11 +30,10 @@
   <li><a href="https://twitter.com/KKGo1999" target="_blank">Twitter (@KKGo1999)</a></li>
   <li>微信与技术交流群</li>
   <img src="img/kkgo1999.wechat.jpg" width="320px" title="微信 (KKGo1999)" />
-  <img src="img/wechat.ai.group.jpg" width="320px" title="AI技术交流微信群" />
 </ul>
 
-<p>如果我的视频或代码对你有帮助，欢迎Buy Me a Coffee, Thanks♪(･ω･)ﾉ：</p>
-<ul>
+<p>如果内容有帮助，欢迎Buy Me a Coffee, 谢谢 ♪(･ω･)ﾉ</p>
+<ul name="nobullet">
   <li><img src="img/wepay.qr.jpg" width="320px" title="微信支付" /></li>
 </ul>
 
