--- a/index.html
+++ b/index.html
@@ -15,19 +15,21 @@
 
 <p>我的AI和科技类视频：</p>
 <ul>
+	<li><a href="https://www.youtube.com/@KKGo1999" target="_blank">YouTube (KKGo1999)</a></li>
 	<li><a href="https://space.bilibili.com/406715814" target="_blank">Bilibili (KKGo1999)</a></li>
 	<li><a href="https://www.douyin.com/user/MS4wLjABAAAA5E-YBbgAvGQwoSdyY8xK5ZPJU3-RlzggGYcrKPkn4eY" target="_blank">抖音 (KKGo1999)</a></li>
-	<li><a href="https://www.youtube.com/@KKGo1999" target="_blank">YouTube (KKGo1999)</a></li>
 </ul>
 
 <p>技术交流：</p>
 <ul>
-  <li><a href="https://github.com/kkgo1999/ChatGPT" target="_blank">ChatGPT技术手册</a></li>
+  <li><a href="https://github.com/kkgo1999/ChatGPT" target="_blank">ChatGPT技术手册及Q&A</a></li>
+  <li><a href="https://github.com/kkgo1999/Stable-diffusion-person" target="_blank">Stable Diffusion生成高清人像小白教程</a></li>
 </ul>
 
 <p>媒体和联络方式：</p>
 <ul>
   <li><a href="https://twitter.com/KKGo1999" target="_blank">Twitter (@KKGo1999)</a></li>
+  <li><a href="https://weibo.com/u/7822770870" target="_blank">微博 (@KKGo1999)</a></li>
   <li>微信与技术交流群</li>
   <img src="img/kkgo1999.wechat.jpg" width="320px" title="微信 (KKGo1999)" />
 </ul>
