--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
   <img src="img/kkgo1999.wechat.jpg" width="320px" title="微信 (KKGo1999)" />
 </ul>
 
+<hr width="100%" color="#999999" size="1">
+
 <p>如果内容有帮助，欢迎Buy Me a Coffee, 谢谢 ♪(･ω･)ﾉ</p>
 <ul name="nobullet">
   <li><img src="img/wepay.qr.jpg" width="320px" title="微信支付" /></li>
