--- a/index.html
+++ b/index.html
@@ -6,7 +6,16 @@
     <title>KKGo1999，AI行业的从业者（程序猿、攻城狮）</title>
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/light.css" media="(prefers-color-scheme: light)">
-    <link rel="stylesheet" href="css/dark.css" media="(prefers-color-scheme: dark)">  
+    <link rel="stylesheet" href="css/dark.css" media="(prefers-color-scheme: dark)">
+    <script>
+      var _hmt = _hmt || [];
+      (function() {
+        var hm = document.createElement("script");
+        hm.src = "https://hm.baidu.com/hm.js?5998dd366ff450c7cb32a3a6ab780e63";
+        var s = document.getElementsByTagName("script")[0]; 
+        s.parentNode.insertBefore(hm, s);
+      })();
+      </script>      
 </head>
 <body>
 <h1>KKGo1999</h1>
@@ -63,14 +72,6 @@ window.matchMedia('(prefers-color-scheme: dark)').addEventListener('change', e =
     document.querySelector('link[href="light.css"]').disabled = false;
   }
 });
-
-var _hmt = _hmt || [];
-(function() {
-    var hm = document.createElement("script");
-    hm.src = "https://hm.baidu.com/hm.js?5998dd366ff450c7cb32a3a6ab780e63";
-    var s = document.getElementsByTagName("script")[0]; 
-    s.parentNode.insertBefore(hm, s);
-})();
 </script>
 </body>
 </html>
