--- a/redirect/gpt_shortcut.html
+++ b/redirect/gpt_shortcut.html
@@ -5,6 +5,15 @@
   <link rel="stylesheet" href="../css/base.css">
   <link rel="stylesheet" href="../css/light.css" media="(prefers-color-scheme: light)">
   <link rel="stylesheet" href="../css/dark.css" media="(prefers-color-scheme: dark)">
+  <script>
+    var _hmt = _hmt || [];
+    (function() {
+      var hm = document.createElement("script");
+      hm.src = "https://hm.baidu.com/hm.js?5998dd366ff450c7cb32a3a6ab780e63";
+      var s = document.getElementsByTagName("script")[0]; 
+      s.parentNode.insertBefore(hm, s);
+    })();
+    </script>
 </head>
 <body>
 <h1><a href="https://www.icloud.com/shortcuts/8a374348758d4ef696cb624c2c1900fc">打开AI小助手</a></h1>
@@ -27,14 +36,6 @@ window.matchMedia('(prefers-color-scheme: dark)').addEventListener('change', e =
     document.querySelector('link[href="light.css"]').disabled = false;
   }
 });
-
-var _hmt = _hmt || [];
-(function() {
-    var hm = document.createElement("script");
-    hm.src = "https://hm.baidu.com/hm.js?5998dd366ff450c7cb32a3a6ab780e63";
-    var s = document.getElementsByTagName("script")[0]; 
-    s.parentNode.insertBefore(hm, s);
-})();
 </script>
 </body>
 </html>
