fix dark mode issue

--- a/options/index.html
+++ b/options/index.html
@@ -44,11 +44,16 @@
                                     <label for="stockSelect">选择或输入股票代码:</label>
                                     <input list="stockOptions" id="stockSelect" class="form-control" placeholder="输入股票代码...">
                                     <datalist id="stockOptions">
+                                        <option value="AAPL">苹果 (AAPL)</option>
                                         <option value="BILI">哔哩哔哩 (BILI)</option>
+                                        <option value="GOOG">谷歌 (GOOG)</option>
                                         <option value="LMND">柠檬水 (LMND)</option>
                                         <option value="NVDA">英伟达 (NVDA)</option>
-                                        <option value="TSLL">特斯拉多头ETF (TSLL)</option>
+                                        <option value="PDD">拼多多 (PDD)</option>
+                                        <option value="RKLB">火箭实验室 (RKLB)</option>
+                                        <option value="TEM">Tempus (TEM)</option>
                                         <option value="TSLA">特斯拉 (TSLA)</option>
+                                        <option value="TSLL">特斯拉多头ETF (TSLL)</option>
                                     </datalist>
                                 </div>
                                 <div class="stock-info mt-3">
