--- a/options/index.html
+++ b/options/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>期权分析工具</title>
+    <title>期权分析</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/png" href="/img/favicon.png">
 </head>
 <body>
     <div class="container mt-4">        
