--- a/options/index.html
+++ b/options/index.html
@@ -174,6 +174,7 @@
                                         <label class="form-check-label" for="putOption">看跌期权</label>
                                     </div>
                                 </div>
+                                <button id="advancedAnalysisBtn" class="btn btn-sm btn-outline-secondary mt-3">高级分析</button>
                             </div>
                         </div>
                     </div>
